--- a/Oefening 1 CPP/Oefening 1 CPP.vcxproj
+++ b/Oefening 1 CPP/Oefening 1 CPP.vcxproj
@@ -149,9 +149,16 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="Text.h" />
     <ClInclude Include="Vector2.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Oefening 1 CPP.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="font1.bin" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
